--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.4.1'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.6.0'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+    implementation 'io.github.florent37:shapeofview:1.4.7'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     // Also add the dependency for the Google Play services library and specify its version
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
