giao dien ql do uong, ql san, ql khachhang

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".KhachHang.ChonDoUong"></activity>
         <activity android:name=".KhachHang.ChiTietDoUong"></activity>
         <activity android:name=".KhachHang.ThongTinDatLich"></activity>
+        <activity android:name=".Admin.KhachHang.Menu"></activity>
     </application>
 
 </manifest>
