--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
         <activity android:name=".KhachHang.ChiTietDoUong"></activity>
         <activity android:name=".KhachHang.ThongTinDatLich"></activity>
         <activity android:name=".Admin.KhachHang.Menu"></activity>
+        <activity android:name=".Admin.San.Menu"/>
+        <activity android:name=".Admin.Douong.Menu"/>
+        <activity android:name=".Admin.Douong.ThemDoUong"/>
     </application>
 
 </manifest>
