--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".Admin.San.Menu"/>
         <activity android:name=".Admin.Douong.Menu"/>
         <activity android:name=".Admin.Douong.ThemDoUong"/>
+        <activity android:name=".Admin.Douong.CapNhatDoUong"/>
     </application>
 
 </manifest>
