Tạm xong đặt lịch NOTE: Require Android >=8 (API 26)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         <activity android:name=".Calendar.WeekViewActivity"/>
         <activity android:name=".Calendar.EventEditActivity"/>
         <activity android:name=".Calendar.DailyCalendarActivity"/>
+        <activity android:name=".KhachHang.DatLichThanhCong"/>
 
     </application>
 
