giao dien thanh toan

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,8 @@
 <!--        Thông tin user-->
         <activity android:name=".KhachHang.ThongTinUser"/>
 
+<!--        Thanh toán-->
+        <activity android:name=".KhachHang.ThanhToan"/>
     </application>
 
 </manifest>
