--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     // Declare the dependency for the Cloud Firestore library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-firestore'
+    implementation fileTree(dir: 'D:\\Duc Tai\\UIT course\\Nam 3\\Ky 2\\NT118.N21-Phat trien ung dung tren thiet bi di dong\\Do an\\Libary', include: ['*.aar', '*.jar'], exclude: [])
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -62,4 +63,8 @@ dependencies {
     implementation 'com.kizitonwose.calendar:view:2.3.0'
     // The compose calendar library
     implementation 'com.kizitonwose.calendar:compose:2.3.0'
+
+    //zalo
+    implementation("com.squareup.okhttp3:okhttp:4.6.0")
+    implementation("commons-codec:commons-codec:1.14")
 }
