--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,8 @@
 <!--        Thông tin đặt lịch-->
         <activity android:name=".KhachHang.ThongTinDatLich"/>
 
+        <activity android:name=".KhachHang.ChiTietDatLich"/>
+
 </application>
 
 </manifest>
