Quan li khach hang

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,10 @@
 
         <activity android:name=".KhachHang.ChiTietDatLich"/>
 
+        <activity android:name=".Admin.UserInfo"/>
+
+        <activity android:name=".Admin.KhachHang.CapNhatKhachHang"/>
+
 </application>
 
 </manifest>
